@@ -28,6 +28,7 @@ CONFIG proxy.config.system.memalign_heap INT 0
 CONFIG proxy.config.exec_thread.autoconfig INT 1
 CONFIG proxy.config.exec_thread.autoconfig.scale FLOAT 3.0
 CONFIG proxy.config.exec_thread.limit INT 2
+CONFIG proxy.config.exec_thread.affinity INT 0
 CONFIG proxy.config.accept_threads INT 1
 
 ##############################################################################
